cluster/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: d20
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: d20/backend
          ports:
            - containerPort: 5000
            - containerPort: 5174
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: d20
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
    - protocol: TCP
      name: vite
      port: 5174
      targetPort: 5174
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: d20
spec:
  ingressClassName: traefik
  rules:
    - host: d20.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
    - host: vite.d20.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5174
